my commit message

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
           <section class="col-md-10">
            <!-- the form modle is copied from Bootstrap and embeded in col  -->
        <!-- changed label value and placehold value to make the form group effective and match  -->
-           <form>
+           <form id=form>
   <div class="form-group">
     <label for="exampleFormControlInput1">Name</label>
     <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name">
