--- a/index.html
+++ b/index.html
@@ -75,19 +75,12 @@
             
               <img
                 src="./Assets/workimage/april.jpg"
-                width="220"
-                height="300"
+                width=220px;
+                height=300px;
                 alt="April Yang"/> 
 
               <p id=p1>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perspiciatis assumenda totam quia ab dicta, vel tempora dolor,
-              molestiae qui atque quam consectetur cumque sequi consequuntur
-              aperiam esse sed minus quasi! Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Beatae eaque nobis quia veritatis
-              cum, iste impedit sit distinctio! Reprehenderit corporis dolore ut
-              nisi voluptatem, necessitatibus sint. Reiciendis libero sequi
-              eligendi!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ipsam aliquid ipsum sapiente debitis exercitationem ipsa voluptas pariatur, facere voluptatem et magni animi doloremque saepe voluptatibus molestias, aperiam ea? Quidem!
+              My name is April. I was born in April which was in spring season, a butiful season , Yes, that was my name come from 
             </p>
             <br />
             <p>
