--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,11 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="Contact.html">Contact <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
       </li>
       <!-- "Portfolio" is be actived when user is in this Portfolio page -->
       <li class="nav-item active">
-        <a class="nav-link" href="Portfolio.html">Portfolio</a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="index.html">About</a>
@@ -76,10 +76,10 @@
  <div class="row">
    <!-- two cols in second row,each image took one half width of container    -->
     <!-- used margin top to give an entent space on the top of each image -->
-   <div class="col-lg-6 mt-4">
+   <div class="col-md-6 mt-4">
                <img class="img-fluid float-left" src="./Assets/workimage/Portfolioimage.jpeg" alt="">
             </div>
-            <div class="col-lg-6 mt-4">
+            <div class="col-md-6 mt-4">
               <img class="img-fluid float-left" src="./Assets/workimage/Portfolioimage.jpeg" alt="">
             </div>
           </div>
@@ -87,10 +87,10 @@
           <div class="row">
              <!-- two cols in third row,each image took one half width of container    -->
     <!-- used margin top to give an entent space on the top of each image -->
-            <div class="col-lg-6 mt-4">
+            <div class="col-md-6 mt-4">
               <img class="img-fluid float-left" src="./Assets/workimage/Portfolioimage.jpeg" alt="">
             </div>
-            <div class="col-lg-6 mt-4">
+            <div class="col-md-6 mt-4">
               <img class="img-fluid float-left" src="./Assets/workimage/Portfolioimage.jpeg" alt="">
             </div>
           </div>
@@ -98,7 +98,7 @@
           <div class="row">
             <!-- one col in forth row, one image took one half width of container    -->
     <!-- used margin top to give an entent space on the top of image -->
-            <div class="col-lg-6 mt-4 mb-4">
+            <div class="col-md-6 mt-4 mb-4">
               <img class="img-fluid float-left" src="./Assets/workimage/Portfolioimage.jpeg" alt="">
             </div>
           </div>
