--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-<!-- nav bar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
+<!-- navbar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
   <!-- added html file in href to make the nav bar linkes to work well -->
 
   
@@ -34,10 +34,10 @@
     <ul class="navbar-nav ml-auto">
       <!-- "Contact" is be actived when user is in this Contact page -->
       <li class="nav-item active">
-        <a class="nav-link" href="Contact.html">Contact <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Portfolio.html">Portfolio</a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="index.html">About</a>
