--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 <body>
 
- <!-- nav bar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
+ <!-- navbar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
   <!-- added html file in href to make the nav bar linkes to work well -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,10 +33,10 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="Contact.html">Contact <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Portfolio.html">Portfolio</a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
       </li>
       <!-- "About" is be actived when user is in this About page -->
       <li class="nav-item active">
@@ -80,14 +80,11 @@
                 alt="April Yang"/> 
 
               <p id=p1>
-              My name is April. I was born in April which was in spring season, a butiful season , Yes, that was my name come from 
+              My name is April. Yes, I was born in April which was in spring season, a beautiful season to start a new year according to the Chinese lunar year calendar. Yes, I came from China. My native language is Chinese Madeiran. I love to travel and learn different cultures. I am a skinny girl, but I can eat a lot when I travel to different countries and places for trying the local delicious food. I recommended that you must to try the local street food if possible that will give you a fresh experience when you travel. Also I love to visit the local bakery and coffee stores to start my day when I travel. I have more than 20 scarf in my scarf collection, most of them are gotten when I was in traveling. My favorite color is yellow. My favorite flower is yellow roses.
             </p>
             <br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              distinctio perspiciatis ratione? Qui, cum! Doloribus dolores qui
-              non corporis facilis nemo praesentium molestias architecto numquam
-              odit. Qui fugit nobis culpa!
+              I am starting to learn coding language because this skill is a trend skill for the new generations. I don’t want to behind the trend, I love to up to date my skills in order to better fit this new technology world. Anything you want to know me, please be a friend with me in <a href="https://www.linkedin.com/in/ying-april-yang-a9bb8720/">Linkedin</a> and <a href="https://github.com/aprilyanggarwood?tab=repositories">GitHub</a>.
             </p>
           </section>
         </div>
