--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 <!-- the first row of container -->
         <div class="row">
           <!-- the content took the entire width of container   -->
-          <header class="col-12">
+          <header class="col-md-12">
             <h1>Contact</h1>
             <hr />
           </header>
