--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
        <!-- only one row in the container -->
        <div class="row">
 <!-- the container took the two third width of the screen -->
-          <article class="col-md-8 clo-lg-8">
+          <section class="col-md-8 clo-lg-8">
 
       <div class="aboutmebackground">
 <!-- the first row of container -->
