edited index.html, style.css and readme.md

--- a/index.html
+++ b/index.html
@@ -82,13 +82,11 @@
                 <div class="row">
                   <!-- the content took the entire width of the container   -->
 
-                  <div class="col-12">
+                  <div class="col-md-12">
                     <p id="p1">
                       <img
                         class="aprilimg"
                         src="./Assets/workimage/april.jpg"
-                        width="220px;"
-                        height="300px;"
                         alt="April Yang"
                       />
 
