changed section and header tags to div tags in .html files

--- a/contact.html
+++ b/contact.html
@@ -73,15 +73,15 @@
                 <!-- the first row of container -->
                 <div class="row">
                   <!-- the content took the entire width of container   -->
-                  <header class="col-md-12">
+                  <div class="col-md-12">
                     <h1>Contact</h1>
                     <hr />
-                  </header>
+                  </div>
                 </div>
                 <!-- the second row of container -->
                 <div class="row">
                   <!-- the content took the two third of width of container   -->
-                  <section class="col-md-10">
+                  <div class="col-md-10">
                     <!-- the form modle is copied from Bootstrap and embeded in col  -->
                     <!-- changed label value and placehold value to make the form group effective and match  -->
                     <form id="form">
@@ -116,7 +116,7 @@
                       <!-- the button modle is copied from Bootstrap and embeded in col  -->
                       <input class="btn" type="submit" value="Submit" />
                     </form>
-                  </section>
+                  </div>
                 </div>
               </div>
             </div>
