--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                 <!-- the first row of container -->
                 <div class="row">
                   <!-- the content took the entire width of container   -->
-                  <header class="col-md-12">
+                  <div class="col-md-12">
                     <h1>About Me</h1>
                     <hr />
-                  </header>
+                  </div>
                 </div>
 
                 <!-- the second row of the container -->
