--- a/portfolio.html
+++ b/portfolio.html
@@ -58,16 +58,16 @@
        <!-- only one row in the container -->
        <div class="row">
 <!-- the container took the two third width of the screen -->
-          <section class="col-md-8 clo-lg-8">
+          <div class="col-md-8 clo-lg-8">
 
       <div class="aboutmebackground">
 <!-- the first row of container -->
          <div class="row">
 <!-- the content took the entire width of container   -->
-          <header class="col-md-12 clo-lg-12">
+          <div class="col-md-12 clo-lg-12">
             <h1>Portfolio</h1>
             <hr class=hr />
-          </header>
+          </div>
         </div>
         
 <!-- the second row of container -->
@@ -103,7 +103,7 @@
           </div>
           </div>
           </div>
-          </section>
+        </div>
         </div>
       </div>
     </div>
