--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,12 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
 
     <!-- extention css stylesheet -->
     <link rel="stylesheet" href="./Assets/style1.css" media="screen" />
@@ -74,7 +80,56 @@
                 <div class="row">
                   <!-- the content took the entire width of container   -->
                   <div class="col-md-12">
-                    <h1>Contact</h1>
+                    <h1>
+                      Contact<span
+                        style="float: right; font-size: 25px; margin-top: 30px"
+                        ;
+                        ><a
+                          target="_blank"
+                          href="./Assets/April Resume for school.pdf"
+                          ><i
+                            class="fa fa-file-text"
+                            aria-hidden="true"
+                            style="font-size: large"
+                          ></i></a
+                      ></span>
+                      <span
+                        style="float: right; font-size: 25px; margin-top: 20px"
+                        ;
+                        ><a
+                          target="_blank"
+                          href="https://www.linkedin.com/in/ying-april-yang-a9bb8720/"
+                          ><i
+                            class="fa fa-linkedin-square"
+                            aria-hidden="true"
+                            style="margin-top: 15px; margin-right: 5px"
+                          ></i></a
+                      ></span>
+                      <span
+                        style="float: right; font-size: 25px; margin-top: 20px"
+                        ;
+                        ><a
+                          target="_blank"
+                          href="https://github.com/aprilyanggarwood"
+                          ><i
+                            class="fa fa-github"
+                            aria-hidden="true"
+                            style="margin-top: 15px; margin-right: 5px"
+                          ></i></a
+                      ></span>
+                      <span
+                        style="float: right; font-size: 20px; margin-top: 23px"
+                        ;
+                        ><a
+                          target="_blank"
+                          href="mailto:aprilyanggarwood@gmail.com"
+                          ><i
+                            class="fa fa-envelope"
+                            aria-hidden="true"
+                            style="margin-top: 15px; margin-right: 5px"
+                          ></i></a
+                      ></span>
+                    </h1>
                     <hr />
                   </div>
                 </div>
