--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
     <!-- extention CSS stylesheet -->
     <link rel="stylesheet" href="./Assets/style1.css" media="screen" />
     <!-- copied and embeded the link of font-family from Google Fonts embaded the font-famlily from Google Fonts for h1 and h2   -->
@@ -72,7 +79,19 @@
                 <div class="row">
                   <!-- the content took the entire width of container   -->
                   <div class="col-md-12">
-                    <h1>About Me</h1>
+                    <h1>
+                      About Me
+                      <span
+                        style="float: right; font-size: 1rem; margin-top: 40px"
+                        ;
+                        ><a
+                          target="_blank"
+                          href="./Assets/April Resume for school.pdf"
+                        >
+                          Resume</a
+                        ></span
+                      >
+                    </h1>
                     <hr />
                   </div>
                 </div>
@@ -112,12 +131,15 @@
                       behind the trend, I love to up to date my skills in order
                       to better fit this new technology world. Anything you want
                       to know me, please be a friend with me in
+
                       <a
+                        target="_blank"
                         href="https://www.linkedin.com/in/ying-april-yang-a9bb8720/"
                         >Linkedin</a
                       >
                       and
                       <a
+                        target="_blank"
                         href="https://github.com/aprilyanggarwood?tab=repositories"
                         >GitHub</a
                       >.
