--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
     <!-- navbar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
     <!-- added html file in href to make the nav bar linkes to work well -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="index.html">
         <h2>April Yang</h2>
       </a>
       <button
@@ -126,7 +126,11 @@
                           ><i
                             class="fa fa-envelope"
                             aria-hidden="true"
-                            style="margin-top: 15px; margin-right: 5px"
+                            style="
+                              margin-top: 15px;
+                              margin-right: 5px;
+                              color: rgb(74, 170, 165);
+                            "
                           ></i></a
                       ></span>
                     </h1>
