--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- navbar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
     <!-- added html file in href to make the nav bar linkes to work well -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="index.html">
         <h2>April Yang</h2>
       </a>
