edited with html and readme files

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
                         ;
                         ><a
                           target="_blank"
-                          href="./Assets/April Resume for school.pdf"
+                          href="./Assets//AprilResumeforschool.pdf"
                           ><i
                             class="fa fa-file-text"
                             aria-hidden="true"
