--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
                       </h5>
                       <a
                         target="_blank"
-                        href="https://aprilyanggarwood.github.io/Passwrod-Generator/"
+                        href="http://127.0.0.1:5500/index.html"
                         ><img
                           class="img-fluid image"
                           class="card-img-top"
@@ -176,18 +176,18 @@
                       ></span>
                       <a
                         target="_blank"
-                        href="https://github.com/aprilyanggarwood/Weather-Dashboard/"
+                        href="https://github.com/aprilyanggarwood/Eat-Da-Burger"
                       >
-                        Weather-Dashboard</a
+                        Eat-Da-Burger</a
                       >
                       </h5>
                       <a
                         target="_blank"
-                        href="https://aprilyanggarwood.github.io/Weather-Dashboard/"
+                        href="https://polar-woodland-54916.herokuapp.com/"
                         ><img
                           class="img-fluid image"
                           class="card-img-top"
-                          src="Assets/gifs/WeatherDashboard.gif"
+                          src="Assets/gifs/Eat-Da-Burger.gif"
                           alt=""
                       /></a>
                     
