updated html and css files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- navbar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
     <!-- added html file in href to make the nav bar linkes to work well -->
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="index.html">
         <h2>April Yang</h2>
       </a>
@@ -49,15 +49,16 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="contact.html"
-              >Contact <span class="sr-only">(current)</span></a
+              ><h5>Contact</h5>
+              <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html"><h5>Portfolio</h5></a>
           </li>
           <!-- "About" is be actived when user is in this About page -->
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="index.html"><h5>About</h5></a>
           </li>
         </ul>
       </div>
@@ -73,7 +74,7 @@
           <!-- only one row in the container -->
           <div class="row">
             <!-- the container took the two third width of the screen -->
-            <div class="col-md-8">
+            <div class="col-md-9">
               <div class="aboutmebackground">
                 <!-- the first row of container -->
                 <div class="row">
@@ -108,30 +109,44 @@
                         src="./Assets/workimage/april.jpg"
                         alt="April Yang"
                       />
-
-                      My name is April. Yes, I was born in April which was in
-                      spring season, a beautiful season to start a new year
-                      according to the Chinese lunar year calendar. Yes, I came
-                      from China. My native language is Chinese Madeiran. I love
-                      to travel and learn different cultures. I am a skinny
-                      girl, but I can eat a lot when I travel to different
-                      countries and places for trying the local delicious food.
-                      I recommended that you must to try the local street food
-                      if possible that will give you a fresh experience when you
-                      travel. Also I love to visit the local bakery and coffee
-                      stores to start my day when I travel. I have more than 20
-                      scarf in my scarf collection, most of them are gotten when
-                      I was in traveling. My favorite color is yellow. My
-                      favorite flower is yellow roses.
+                      My name is April. I have a lot of sales, customer service,
+                      and marketing work experience with my priviouse and
+                      current jobs both in China and America. My work
+                      experiences have taught me to ask questions and pay
+                      attention to detail, as these are really important for
+                      people to succeed in their career.
                     </p>
-                    <br />
                     <p>
-                      I am starting to learn coding language because this skill
-                      is a trend skill for the new generations. I don’t want to
-                      behind the trend, I love to up to date my skills in order
-                      to better fit this new technology world. Anything you want
-                      to know me, please be a friend with me in
-
+                      Humility, teamwork, and curiosity are my strengths in both
+                      my professional and educational career. I believe that
+                      everyone around me could be my teacher/mentor in my life
+                      and career.
+                    </p>
+                    <p>
+                      Good collaboration and a good relationship with colleagues
+                      can make us more efficient and productive during our daily
+                      work.
+                    </p>
+                    <p>
+                      Currently, I am pursuing a certificate in a full stack
+                      web-development at University of Washington. I am
+                      motivating myself to learn computer coding skills because
+                      there are more job opportunities in this job field, and my
+                      interest and curiosity brought me into this field. I love
+                      to keep my skills up to date in order to better fit this
+                      new technologic world.
+                    </p>
+                    <p>
+                      Today, as we know, more and more people love/need to use
+                      the web or mobile applications to do more things at their
+                      convenience. Therefore, my goals in my future tech career
+                      are to help companies to create and develop easy-to-use
+                      applications based on company and user’s needs in order to
+                      build an online channel for both sides to efficiently
+                      interact and communicate 24/7.
+                    </p>
+                    <p>
+                      If you want to know more about me, please be a friend on
                       <a
                         target="_blank"
                         href="https://www.linkedin.com/in/ying-april-yang-a9bb8720/"
@@ -143,6 +158,37 @@
                         href="https://github.com/aprilyanggarwood?tab=repositories"
                         >GitHub</a
                       >.
+                    </p>
+                    <p>
+                      Technical Skills: 
+                      <div class="row">
+                      <div class="col-md-4">
+                      <ul>
+                        <li>HTML5</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                        <li>JavaScript ES6</li>
+                        <li>jQuery</li>
+                      </ul>
+                      </div>
+                      <div class="col-md-4">
+                        <ul>
+                       <li>Express</li>
+                        <li>Handlebars</li>
+                        <li>MySQL and Sequelize</li>
+                        <li>Mongo and Mongoose</li>
+                        </ul>
+                      </div>
+                         <div class="col-md-4">
+                      <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                      </ul>
+                      </div>
+                      </div>              
                     </p>
                   </div>
                 </div>
