--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     <!-- nav bar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
     <!-- added html file in href to make the nav bar linkes to work well -->
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="index.html">
         <h2>April Yang</h2>
       </a>
@@ -51,15 +51,15 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="contact.html"
-              >Contact <span class="sr-only">(current)</span></a
+              ><h5>Contact</h5><span class="sr-only">(current)</span></a
             >
           </li>
           <!-- "Portfolio" is be actived when user is in this Portfolio page -->
           <li class="nav-item active">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html"><h5>Portfolio</h5></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="index.html"><h5>About</h5></a>
           </li>
         </ul>
       </div>
@@ -102,7 +102,7 @@
                         href="https://github.com/aprilyanggarwood/Weather-Dashboard/"
                       >
                         Weather-Dashboard</a
-                      >
+                      ><span><h6>(Used Two OpenWeather APIs)</h6></span>  
                     </h5>
                     <a
                       target="_blank"
@@ -127,7 +127,7 @@
                         href="https://github.com/girmaD/Trip-Planner/"
                       >
                         Trip-Planner</a
-                      >
+                      ><span><h6>(Group Project)</h6></span>
                     </h5>
                     <a
                       target="_blank"
@@ -153,7 +153,7 @@
                         href="https://github.com/aprilyanggarwood/Password-Generator/"
                       >
                         Password-Generator</a
-                      >
+                      ><span><h6>(Front-end JavaScript App)</h6></span> 
                       </h5>
                       <a
                         target="_blank"
@@ -176,21 +176,20 @@
                       ></span>
                       <a
                         target="_blank"
-                        href="https://github.com/aprilyanggarwood/Eat-Da-Burger"
+                        href="https://github.com/aprilyanggarwood/CaffeinParadise2/tree/main"
                       >
-                        Eat-Da-Burger</a
-                      >
+                        Caffein-Paradise2</a
+                      ><span><h6>(Group Project)</h6></span>
                       </h5>
                       <a
                         target="_blank"
-                        href="https://polar-woodland-54916.herokuapp.com/"
+                        href="https://caffeinparadise2.herokuapp.com/signup.html"
                         ><img
                           class="img-fluid image"
                           class="card-img-top"
-                          src="Assets/gifs/Eat-Da-Burger.gif"
+                          src="Assets/gifs/Caffein-Paradise2.gif"
                           alt=""
-                      /></a>
-                    
+                      /></a>                    
                   </div>
                 </div>
              
@@ -201,22 +200,22 @@
                       <span class="githubicon"
                         ><i class="fa fa-github" aria-hidden="true"></i
                       ></span>
-                      <a
+                       <a
                         target="_blank"
-                        href="https://github.com/aprilyanggarwood/Weather-Dashboard/"
+                        href="https://github.com/aprilyanggarwood/Eat-Da-Burger"
                       >
-                        Weather-Dashboard</a
-                      >
+                        Eat-Da-Burger</a
+                      ><span><h6>(A Full Stack Applications)</h6></span> 
                       </h5>
                       <a
                         target="_blank"
-                        href="https://aprilyanggarwood.github.io/Weather-Dashboard/"
+                        href="https://polar-woodland-54916.herokuapp.com/"
                         ><img
                           class="img-fluid image"
                           class="card-img-top"
-                          src="Assets/gifs/WeatherDashboard.gif"
+                          src="Assets/gifs/Eat-Da-Burger.gif"
                           alt=""
-                      /></a>                   
+                      /></a>                                    
                   </div>
                 </div>
 
@@ -227,7 +226,7 @@
                       <span class="githubicon"
                         ><i class="fa fa-github" aria-hidden="true"></i
                       ></span>
-                      <a
+                       <a
                         target="_blank"
                         href="https://github.com/aprilyanggarwood/Weather-Dashboard/"
                       >
@@ -242,7 +241,7 @@
                           class="card-img-top"
                           src="Assets/gifs/WeatherDashboard.gif"
                           alt=""
-                      /></a>                   
+                      /></a>  
                   </div>
                 </div>
               </div>
