--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <!-- navbar model copied from Bootstrap. Edited and pushed unlisted manual to the right of the screen. -->
     <!-- added html file in href to make the nav bar linkes to work well -->
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="index.html">
         <h2>April Yang</h2>
       </a>
@@ -51,14 +51,15 @@
           <!-- "Contact" is be actived when user is in this Contact page -->
           <li class="nav-item active">
             <a class="nav-link" href="contact.html"
-              >Contact <span class="sr-only">(current)</span></a
+              ><h5>Contact</h5>
+              <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html"><h5>Portfolio</h5></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="index.html"><h5>About</h5></a>
           </li>
         </ul>
       </div>
